--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="campo">
                         <i class="material-icons">vpn_key</i>
-                        <input type="password" name="Senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8">
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8">
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
